--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiohttp==3.12.15
 aiosignal==1.4.0
 aiosqlite==0.21.0
 annotated-types==0.7.0
+asyncpg==0.30.0
 attrs==25.3.0
 certifi==2025.8.3
 dotenv==0.9.9
